# householder_gis

./: .example.env  .gitignore  .pre-commit-config.yaml  README.md  deploy.sh  docker-compose-dev.yml  dump_db.sh  manage.py  requirements.txt
geo_back/: .gitignore  README.md  manage.py  pyproject.toml  pytest.ini
geo_back/data/: opponents.csv
geo_back/householder_gis/: asgi.py  settings.py  urls.py  wsgi.py
geo_back/householder_gis/simplegis/: admin.py  apps.py  calculate_geometry.py  getiso.py  models.py  serrializers.py  urls.py  views.py
geo_back/householder_gis/simplegis/domain/entities/: bus_stops.py  geodata_layer.py  houses.py  isochron.py  isochrone.py  metro_stations.py  (+1 more)
geo_back/householder_gis/simplegis/logic/: calculate_geometry.py  getiso.py
geo_back/householder_gis/simplegis/migrations/: 0001_initial.py  0002_delete_user.py  0003_initial.py  0004_rename_test_house.py  0005_metro.py  0006_rename_incomingpassangers_metro_incomingpassengers.py  0007_busstop.py  0008_shop.py  0009_rename_stationname_busstop_name_and_more.py  0010_rename_incomingpassengers_metro_incoming_passengers.py  0011_alter_busstop_options_alter_house_options_and_more.py  0012_alter_shop_address_alter_shop_name.py
geo_back/householder_gis/simplegis/services/: bus_stops.py  geodata_layer.py  houses.py  isochron.py  isochrone.py  metro_stations.py  shops.py
geo_back/householder_gis/simplegis/static/: index_page.css
geo_back/householder_gis/simplegis/templates/: map.html  showinfo.html
geo_back/householder_gis/simplegis/tests/: conftest.py  factories.py  test_api.py
(+78 files in other folders)
