[tool.poetry]
name = "geo-back"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.1"
djangorestframework = "3.13.1"
drf-yasg = "^1.21.7"
psycopg2-binary = "^2.9.9"
environs = "^10.3.0"
folium = "0.12.1.post1"
networkx = "^3.2.1"
osmnx = "^1.9.1"
scipy = "^1.12.0"
djangorestframework-gis = "^1.0"
sqlalchemy = "^2.0.27"
geoalchemy2 = "^0.14.4"
django-debug-toolbar = "^4.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
